k8s/apps/gitea/runner.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea-act-runner
spec:
  selector:
    matchLabels:
      app: gitea-act-runner
  template:
    metadata:
      labels:
        app: gitea-act-runner
    spec:
      hostname: gitea-runner
      containers:
        - name: gitea-act-runner
          image: gitea/act_runner:0.2.12-dind-rootless@sha256:e00005fdd3387f76de2d8cb00f9cb8ae3327bd2af72af9096ed0a64274e34c82
          securityContext:
            privileged: true
