k8s/apps/gitea/gitea.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea
spec:
  selector:
    app: gitea
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  type: ClusterIP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gitea-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitea
  serviceName: "gitea"
  template:
    metadata:
      labels:
        app: gitea
    spec:
      containers:
        - name: gitea
          image: gitea/gitea:1.24.4-rootless@sha256:fc76050d5f78fb0f59fdd859bab9a671cc6c0c43e3478dddf25d594d90a74034
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: gitea-data
              mountPath: /var/lib/gitea
            - name: gitea-conf
              mountPath: /etc/gitea
      volumes:
        - name: gitea-data
          persistentVolumeClaim:
            claimName: gitea-data
        - name: gitea-conf
          persistentVolumeClaim:
            claimName: gitea-conf
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea
  namespace: gitea
spec:
  rules:
    - host: gitea.cocointhe.cloud
      http:
        paths:
          - backend:
              service:
                name: gitea
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - gitea.cocointhe.cloud
